--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -17,6 +17,10 @@
     background: transparent url(../images/tron-trx-logo.svg) 12px 50% no-repeat;
 }
 
+.cc-sol span {
+    background: transparent url(../images/solana-sol-logo.svg) 12px 50% no-repeat;
+}
+
 .cc-logo {
     width: 64px;
     height: 64px;
